# cours-data-processing

./: .dev.env  .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  build.sh  environment.yml  myst.yml  pyproject.toml  requirements.txt  styles.css  webscraping.ipynb
.github/workflows/: deploy.yml
data/: Le_Tour_du_monde_en_quatre-vingts_jours_chapters.csv  Le_Tour_du_monde_en_quatre-vingts_jours_chapters.parquet  punk.html
lite/wasm-wheels/: README.md  blis-1.3.3-cp312-cp312-pyodide_2024_0_wasm32.whl  cymem-2.0.13-cp312-cp312-pyodide_2024_0_wasm32.whl  murmurhash-1.0.15-cp312-cp312-pyodide_2024_0_wasm32.whl  preshed-3.0.13-cp312-cp312-pyodide_2024_0_wasm32.whl  spacy-3.8.13-cp312-cp312-pyodide_2024_0_wasm32.whl  srsly-2.5.3-cp312-cp312-pyodide_2024_0_wasm32.whl  thinc-8.3.13-cp312-cp312-pyodide_2024_0_wasm32.whl
notebooks/: 01_spacy_basics.ipynb  02_webscraping_basics.ipynb  03_europeana_scraping.ipynb  04_dts_scraping.ipynb  05_vibe_coding_scraping.ipynb
pages/: index.md  resources.md
src/: install_pyodide.py
